# temporal-leaks

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
temporal-leaks/: __init__.py  auditor.py
temporal_leaks/: __init__.py  auditor.py  exceptions.py
temporal_leaks/adapters/: __init__.py  sklearn.py
temporal_leaks/cli/: __init__.py
temporal_leaks/core/: __init__.py  contamination.py  future_leak.py  lookahead.py
tests/: test_adapters.py  test_auditor.py  test_cli.py  test_core.py
