[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temporal-leaks"
version = "0.1.0"
description = "Valgrind for Time-Series ML — automatically detect look-ahead bias in data science pipelines."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "temporal-leaks contributors" },
]
keywords = ["time-series", "leakage", "look-ahead-bias", "machine-learning", "data-science", "auditing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dependencies = [
  "pandas>=1.5.0",
  "polars>=0.19.0",
  "numpy>=1.23.0",
  "Jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.1.0",
  "mypy>=1.5.0",
  "pandas-stubs>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/temporal-leaks/temporal-leaks"
Repository = "https://github.com/temporal-leaks/temporal-leaks"
"Bug Tracker" = "https://github.com/temporal-leaks/temporal-leaks/issues"

[tool.hatch.build.targets.wheel]
packages = ["temporal_leaks"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "SIM", "TCH"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"

[tool.coverage.run]
source = ["temporal_leaks"]
omit = ["tests/*"]
